1998-05-11  Mikael Djurfeldt  <mdj@kenneth>

	* readline.c (scm_add_history): Bugfix: Do strdup before giving
	away the string to add_history.
	(completion_function): Do completion for readline.
	(scm_filename_completion_function): New procedure: Filename
	completer.
	(current_input_getc): New function.  Use this one instead of
	standard getc from readline.

	* throw.c, throw.h (scm_handle_by_throw): New function: This
	handler throws errors to next handler on the dynwind chain.

1998-05-09  Mikael Djurfeldt  <mdj@kenneth>

	* scmsigs.c (scm_usleep): Bugfix: Don't define j if it isn't
	used.

1998-05-03  Mikael Djurfeldt  <mdj@mdj.nada.kth.se>

	* procprop.c (scm_i_procedure_arity): New function.  Returns arity
	of procedure.
	(scm_procedure_properties): Modified to return arity together with
	other properties.
	(scm_procedure_property): Added the read-only property `arity'.
	(scm_set_procedure_property_x): It is an error to set the `arity'
	property.

	* gsubr.h, gsubr.c: Moved macros from gsubr.c to gsubr.h and added
	prefix SCM_; Made f_gsubr_apply global and added prefix scm_.

	* procprop.h (scm_sym_arity): New symbol.

	* objects.c (scm_set_object_procedure_x): New procedure: Use this
	to set the dispatch procedure of an operator or entity object.

	* objects.h (SCM_METACLASS_OPERATOR_LAYOUT, SCM_ENTITY_LAYOUT):
	Made procedure slots read-only.

	* eval.c (SCM_CEVAL): Moved scm_tc7_contin case above
	scm_tcs_cons_gloc case in zero args switch; Fixed args
	construction for operators in scm_tcs_cons_gloc case in two args
	switch.

1998-05-02  Mikael Djurfeldt  <mdj@mdj.nada.kth.se>

	* fluids.c: Removed use of assert.h (in order to avoid
	__eprintf).

	* Makefile.am (libguile_la_LDFLAGS): Added -export-dynamic.

	* dynl.c (maybe_drag_in_eprintf): Disabled through #ifdef 0.

	* eval.c (SCM_CEVAL): Do more thorough argument checking.  This
	change makes the evaluator safer at the cost of evaluation speed.